# trinity

./: .gitignore  Cargo.toml  README.md  flake.nix  ideas.md  index.html  justfile
.github/workflows/: check.yaml  ci.yaml  coverage.yaml  fuzz.yaml  gh-pages.yaml  mutants.yaml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_expression_from_string.rs  tokenise_expression.rs
src/: lib.rs  main.rs
src/bevy/: entrypoint.rs  mod.rs  setup.rs
src/math/: mod.rs  square_multiply.rs
src/matrix/: map.rs  mod.rs
src/matrix/expression/: ast.rs  mod.rs  parser.rs  tokenise.rs
src/matrix/expression/parser/: mod.rs  nom_impl.rs  tokens.rs
