[package]
name = "trinity"
version = "0.1.0"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "AGPL-3.0-only"
publish = false

[dependencies]
glam = { version = "0.29.0", features = ["approx"] }
thiserror = "1.0.63"

[dev-dependencies]
approx = "0.5.1"
