[package]
name = "trinity"
version = "0.1.0"
edition = "2021"
authors = ["Dyson Dyson <dyson.dyson@icloud.com>"]
repository = "https://github.com/DoctorDalek1963/winter-wonderlights"
license = "AGPL-3.0-only"
publish = false

[dependencies]
approx = "0.5.1"
glam = "0.29.0"
lazy_static = "1.5.0"
mutants = "0.0.3"
nom = "7.1.3"
nom-regex = "0.2.0"
rand = "0.8.5"
regex = "1.10.6"
smol_str = "0.2.2"
thiserror = "1.0.63"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "^0", features = ["js"] }

[dev-dependencies]
glam = { version = "0.29.0", features = ["approx", "rand"] }
